--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,26 @@
     <string name="donut_order_message">You ordered a donut.</string>
     <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
     <string name="froyo_order_message">You ordered a FroYo.</string>
+
+    <string name="change_dessert">Change dessert</string>
+    <string name="order_label_text">Order:</string>
+    <string name="name_label_text">Name</string>
+    <string name="enter_your_name">Enter your name</string>
+    <string name="address_label">Address</string>
+    <string name="enter_address">Enter address</string>
+    <string name="enter_phone">Enter phone</string>
+    <string name="phone">Phone</string>
+    <string name="enter_note">Enter note</string>
+    <string name="note">Note</string>
+    <string name="choose_delivery_method">Choose a delivery method:</string>
+    <string name="same_day_messenger_service">Same day messenger service</string>
+    <string name="next_day_ground_delivery">Next day ground delivery</string>
+    <string name="pick_up">Pick up</string>
+
+    <string-array name="labels_array">
+        <item>Home</item>
+        <item>Work</item>
+        <item>Mobile</item>
+        <item>Other</item>
+    </string-array>
 </resources>
